Created algorithm folder

--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipynb.fs.full.funcs7 import *"
+    "from ipynb.fs.full.funcs import *"
    ]
   },
   {
