--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -4,29 +4,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Original code**: [Babak Khavari](https://github.com/babakkhavari)<br>\n",
+    "**Conceptualization & Methodological review** : [Babak Khavari](https://github.com/babakkhavari)<br>\n",
+    "**Updates, Modifications**: [Babak Khavari](https://github.com/babakkhavari)<br>\n",
+    "**Funding**: The World Bank (contract number: 7185716), [KTH](https://www.energy.kth.se/energy-systems/)\n",
+    "\n",
     "# Clustering Notebook\n",
     "\n",
-    "The following notebook can be used in order to generate population settlements. The final result will include this 6 columns.\n",
+    "The following notebook can be used in order to replicate the population clusters developed and published in https://data.mendeley.com/datasets/z9zfhzk8cr/. Please see **Clusters in action - Assessing the urban-rural split and electrification in Sub-Saharan Africa**(<-- Add link) for more information. \n",
     "\n",
-    "**1.** id – The IDs are given as a unique number for each cluster. This enables the user to process the data contained in the clusters outside of a GIS software and then merge the data with the clusters.\n",
+    "## Datasets\n",
+    "The cluster makes use of three (3) GIS-datasets:\n",
+    "* **Administrative units (vector polygon)** - This should be disagreggated. It will be used to 1) delimit the population layer to the area of interest and 2) to limit the maximum size of the clusters\n",
+    "* **Population (raster)**\n",
+    "* **Nighttime lights (raster)** - This will be used in order to estimate electrified population in each cluster.\n",
     "\n",
-    "**2.** Country - Name of the country.\n",
     "\n",
-    "**3.** Population – This is the population in each cluster obtained from the population dataset.\n",
+    "## Pre-processing\n",
+    "Before using this notebook please ensure that all of your datasets are in the WGS84 coordinate reference system (EPSG:4326) and that your raster datasets are clipped to the administrative boundaries of the area of interest \n",
     "\n",
-    "**4.** NightLight – This value is obtained from the night-time light map and represents the maximum luminance detected in each cluster based on the latest stable light product available.\n",
     "\n",
-    "**5.** ElecPop – The number of people in each cluster who live in areas in which the stable light product detect light sources.\n",
+    "## Output\n",
+    "The final clusters will include 7 columns.\n",
     "\n",
-    "**6.** Area – The area of each cluster given in sq. kilometres.\n",
-    "    \n"
+    "1. **id** – The IDs are given as a unique number for each cluster. This enables the user to process the data contained in the clusters outside of a GIS software and then merge the data with the clusters.\n",
+    "\n",
+    "\n",
+    "2. **Country** – Name of the country. \n",
+    "\n",
+    "\n",
+    "3. **Population** – This is the population in each cluster obtained from the population dataset.\n",
+    "\n",
+    "\n",
+    "4. **NightLight** – This value is obtained from the nighttime light map and represents the maximum luminance detected in each cluster based on the latest stable light product available.\n",
+    "\n",
+    "\n",
+    "5. **ElecPop** – The number of people in each cluster who live in areas in which the stable light product detect light sources.\n",
+    "\n",
+    "\n",
+    "6. **Area** – The area of each cluster given in sq. kilometres.\n",
+    "\n",
+    "\n",
+    "7. **IsUrban** - Urban/Peri-urban/Rural classification (0 = rural, 1 = peri-urban, 2 = urban)\n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 1 - Importing packages Datasets"
+    "## Cell 1 - Importing packages"
    ]
   },
   {
@@ -42,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 1 - Selecting Datasets\n",
+    "## Cell 2 - Selecting Datasets\n",
     "\n",
     "Select the workspace, this is the folder that will be used for the outputs. \n",
     "\n",
@@ -51,31 +78,19 @@
     "You will also have to select the three datasets used in the analysis. These are:\n",
     "\n",
     "**Administrative boundaries**\n",
-    "This should be disagreggated. It will be used to 1) delimit the population layer to the area of interest and 2) to limit the maximum size of the clusters\n",
+    "\n",
     "\n",
     "**Population raster**\n",
     "\n",
     "**Night time lights**\n",
-    "This will be used in order to determine how many people live in areas with visible lights. \n"
+    " \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'messagebox' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-941123a85fdd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmessagebox\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshowinfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'OnSSET extraction'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Output folder'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mworkspace\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfiledialog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maskdirectory\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mmessagebox\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshowinfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'OnSSET'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Select the population map'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mfilename_pop\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfiledialog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maskopenfilename\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiletypes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"rasters\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"*.tif\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"all files\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"*.*\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'messagebox' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "messagebox.showinfo('OnSSET extraction', 'Output folder')\n",
     "workspace = filedialog.askdirectory()\n",
@@ -99,9 +114,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 2 - Setting study area name\n",
+    "## Cell 3 - Setting study area name\n",
     "\n",
-    "This will dictate the name in the final clusters"
+    "This will dictate the name in the country column of the final clusters"
    ]
   },
   {
@@ -110,19 +125,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "country_name = \"Yemen\""
+    "study_area_name = \"Benin\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 3 - Setting the target coordinate system\n",
-    "When calculating distances it is important to choose a coordinate system that represents distances correctly in your area of interst. The coordinate system that is given below is the World Mercator, these coordinate system works well for Sub Saharan Africa but the distortions get larger as you move away from the equator.\n",
+    "## Cell 4 - Setting the target coordinate system\n",
+    "When calculating distances it is important to choose a coordinate system that represents distances and areas correctly in your area of interst. The coordinate system that is given below is the World Mercator, these coordinate system works well for Sub Saharan Africa but the distortions get larger as you move away from the equator.\n",
     "\n",
     "In order to select your own coordinate system go to [epsg.io](http://epsg.io/) and type in your area of interest, this will give you a list of coordinate systems to choose from. Once you have selected your coordinate system replace the numbers below with the numbers from your coordinate system **(keep the \"EPSG\" part)**.\n",
     "\n",
-    "**NOTE** When selecting your coordinate system make sure that you select a system with the unit of meters, this is indicated for all systems on [epsg.io](http://epsg.io/)"
+    "**NOTE** When selecting your coordinate system make sure that you select a system with the unit of meters (or another linear lenght unit), this is indicated for all systems on [epsg.io](http://epsg.io/)"
    ]
   },
   {
@@ -138,12 +153,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Urban ratio\n",
+    "## Cell 5 - Urban ratio, actual population and thresholds\n",
     "\n",
-    "Enter the urban ratio in the study area. This will be used to calibrate the urban and rural clusters.\n",
-    "\n",
-    "0 = everyone is rural,\n",
-    "1 = everyone is urban"
+    "1) Enter the urban ratio in the study area. This will be used to calibrate the urban and rural clusters (0 = everyone is rural, 1 = everyone is urban).<br><br>\n",
+    "2) Enter the total population in your study area for the year of interest. This will be used to calibrate the raster population layer to the right population.<br><br>\n",
+    "3) Enter thresholds for population and nighttime light. All values under the threshold in the population and/or NTL maps will be removed. This will have an effect on the electrification proxy and can be used in order to remove noise in the NTL maps."
    ]
   },
   {
@@ -152,14 +166,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "urban_ratio = 0.473"
+    "urban_ratio = 0.48\n",
+    "total_population = 12123000\n",
+    "population_threshold = 0\n",
+    "NTL_threshold = 0"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 4 - Clipping raster layers"
+    "## Cell 6 - Clipping raster layers\n",
+    "\n",
+    "Clipping the nighttime lights and population maps to the extent of the study area."
    ]
   },
   {
@@ -168,41 +187,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clipped_NTL = ClipRasterByExtent(NTL, admin, workspace)\n",
-    "clipped_Pop = ClipRasterByExtent(pop, admin, workspace)"
+    "clipped_NTL = clipRasterByExtent(NTL, admin)\n",
+    "clipped_Pop = clipRasterByExtent(pop, admin)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 5 - Reclassifying rasters"
+    "## Cell 7 - Reclassifying rasters\n",
+    "\n",
+    "Reclassifies the clipped nighttime lights and population layers. The function sets everything under the thresholds to zero. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ipynb.fs.full.funcs7:52: RuntimeWarning: invalid value encountered in greater\n",
-      "ipynb.fs.full.funcs7:52: RuntimeWarning: invalid value encountered in less\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "reclassified_NTL = ReclassifyRasters(clipped_NTL)\n",
-    "reclassified_Pop = ReclassifyRasters(clipped_Pop)"
+    "reclassified_NTL = reclassifyRasters(clipped_NTL, NTL_threshold)\n",
+    "reclassified_Pop = reclassifyRasters(clipped_Pop, population_threshold)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 6 - Resample population raster"
+    "## Cell 8 - Resample population raster\n",
+    "\n",
+    "Resample population layer and save the resampled map to disc.\n",
+    "\n",
+    "In **resampleRaster** the first parameter is the raster to be reclassified. The second parameter is the factor used in the resampling (i.e if you have a raster with cell size 30m a factor 3 creates an output raster with cell size 90m). You are recommended to change this value to one if the cell-size of your population layer is larger than 100m. The output is a memory layer.\n",
+    "\n",
+    "In **saveRaster** the memory layer from resampleRaster is saved to disc."
    ]
   },
   {
@@ -211,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resampled_Pop = ResampleRaster(reclassified_Pop, 3)\n",
+    "resampled_Pop = resampleRaster(reclassified_Pop, 3)\n",
     "saveRaster(resampled_Pop, workspace + r\"/rasterBase.tif\")"
    ]
   },
@@ -219,7 +237,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 7 - Convert rasters to polygon"
+    "## Cell 9 - Convert rasters to polygon\n",
+    "\n",
+    "Converts the nighttime lights greater than the threshold to polygons. The second parameter ensures that the polygons are saved with the correct name"
    ]
   },
   {
@@ -228,14 +248,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NTL_pol = ToPolygon(reclassified_NTL, 2, workspace + r\"/NTLArea\")"
+    "NTL_pol = toPolygon(reclassified_NTL, 2, workspace + r\"/NTLArea\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 8 - Creating the cluster base"
+    "## Cell 10 - Creating the cluster base\n",
+    "\n",
+    "**rasterize** Coverts the administrative areas to rasters.\n",
+    "\n",
+    "**rasterMultiplication** multiplies the resampled population with the rasterized admin and overwrites the reasmple raster with the results.\n",
+    "\n",
+    "**toPolygon** coverts the results from the rasterMultiplication to polygons. The second parameter ensures that the polygons are saved with the correct name. \n",
+    "\n",
+    "This ensures that the clusters do not spil over different administrative borders. If you do not wish to add such a restriction use the national administrative unit as your administrative layer (level 0). "
    ]
   },
   {
@@ -245,15 +273,17 @@
    "outputs": [],
    "source": [
     "rasterize(admin, filename_admin,resampled_Pop, workspace + r'/raster_admin.tif')\n",
-    "array_calc(workspace + r\"/rasterBase.tif\", workspace + r\"/raster_admin.tif\", workspace + r\"/rasterBase.tif\")\n",
-    "clusters = ToPolygon(workspace + r\"/rasterBase.tif\", 1, workspace + r\"/clusters\")"
+    "rasterMultiplication(workspace + r\"/rasterBase.tif\", workspace + r\"/raster_admin.tif\", workspace + r\"/rasterBase.tif\")\n",
+    "clusters = toPolygon(workspace + r\"/rasterBase.tif\", 1, workspace + r\"/clusters\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adding attributes to clusters"
+    "## Cell 11 - Adding attributes to clusters\n",
+    "\n",
+    "Generates the *id*, *Country* and *Area* columns."
    ]
   },
   {
@@ -262,38 +292,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clusters = addAttributes(clusters, crs, country_name)"
+    "clusters = addAttributes(clusters, crs, study_area_name)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 9 - Generate ElecPop "
+    "## Cell 12 - Generate ElecPop \n",
+    "\n",
+    "Clip the population data with the polygon nighttime lights to generate layer with population in lit areas. This spatial distribution in this layer is dependent on the thresholds given in [Cell 5](http://localhost:8888/notebooks/main.ipynb#Cell-5---Urban-ratio,-actual-population-and-thresholds). "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ipynb.fs.full.funcs7:217: RuntimeWarning: invalid value encountered in less\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "elecPop = ClipRasterByMask(poprasterio.name, workspace + r\"/NTLArea.shp\", \"EPSG:4326\", workspace + r\"/rasterBase.tif\")"
+    "elecPop = clipRasterByMask(poprasterio.name, workspace + r\"/NTLArea.shp\", \"EPSG:4326\", workspace + r\"/rasterBase.tif\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 10 - Populating clusters"
+    "## Cell 13 - Populating clusters\n",
+    "\n",
+    "Adding the *Population*, *NightLight* and *ElecPop* columns."
    ]
   },
   {
@@ -311,7 +337,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 11 - Finalizing clusters"
+    "## Cell 14 - Calibrate population \n",
+    "\n",
+    "Calibrating population based on the population value given in [Cell 5](http://localhost:8888/notebooks/main.ipynb#Cell-5---Urban-ratio,-actual-population-and-thresholds)."
    ]
   },
   {
@@ -320,15 +348,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "elecPop = None\n",
-    "clusters = finalizing_clusters(clusters, workspace)"
+    "elecPop=None\n",
+    "clusters = calibratePop(clusters, workspace, total_population)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell 12 - Calibrate Urban and rural split "
+    "## Cell 15 - Calibrate Urban and rural split \n",
+    "\n",
+    "Calibrating urban ratio based on the urban rate given in [Cell 5](http://localhost:8888/notebooks/main.ipynb#Cell-5---Urban-ratio,-actual-population-and-thresholds)."
    ]
   },
   {
@@ -340,12 +370,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "modelled urban ratio is 0.47374957182337896% in comparision to the actual ratio of 0.473%\n"
+      "modelled urban ratio is 0.474% in comparision to the actual ratio of 0.48% after 14 iterations.\n"
      ]
     }
    ],
    "source": [
-    "urbanSplit = CalibrateUrban(clusters, urban_ratio, workspace)"
+    "urbanSplit = calibrateUrban(clusters, urban_ratio, workspace)"
    ]
   }
  ],
