--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "# Clustering Notebook\n",
     "\n",
-    "The following notebook can be used in order to replicate the population clusters developed and published in https://data.mendeley.com/datasets/z9zfhzk8cr/. Please see **Clusters in action - Assessing the urban-rural split and electrification in Sub-Saharan Africa**(<-- Add link) for more information. \n",
+    "The following notebook can be used in order to replicate the population clusters developed and published in https://data.mendeley.com/datasets/z9zfhzk8cr/. Please see **Clusters in action - Assessing the urban-rural split and electrification in Sub-Saharan Africa**(<-- Add link) for more information. For a more thorough description of each function please refer to the funcs.ipynb. \n",
     "\n",
     "## Datasets\n",
     "The cluster makes use of three (3) GIS-datasets:\n",
