--- a/Algorithm/funcs.ipynb
+++ b/Algorithm/funcs.ipynb
@@ -170,7 +170,7 @@
     "\n",
     "    Returns\n",
     "    ----------\n",
-    "    Resampled raster layer with the each side being  ied raster layer without values under the threshold \n",
+    "    Resampled raster layer with the each side of the pixels being a specified factor larger than the original pixel \n",
     "    \"\"\"\n",
     "    \n",
     "    gt =raster.GetGeoTransform()\n",
