--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -36,7 +36,7 @@
     "3. **Population** – This is the population in each cluster obtained from the population dataset.\n",
     "\n",
     "\n",
-    "4. **NightLight** – This value is obtained from the nighttime light map and represents the maximum luminance detected in each cluster based on the latest stable light product available.\n",
+    "4. **NightLight** – This value is obtained from the nighttime light map and represents the maximum luminance detected in each cluster.\n",
     "\n",
     "\n",
     "5. **ElecPop** – The number of people in each cluster who live in areas in which the stable light product detect light sources.\n",
