--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -39,13 +39,13 @@
     "4. **NightLight** – This value is obtained from the nighttime light map and represents the maximum luminance detected in each cluster (best results are obtained with stable lights).\n",
     "\n",
     "\n",
-    "5. **ElecPop** – The number of people in each cluster who live in areas in which the stable light product detect light sources.\n",
+    "5. **ElecPop** – The number of people in each cluster who live in areas where light sources are detected.\n",
     "\n",
     "\n",
-    "6. **Area** – The area of each cluster given in sq. kilometres.\n",
+    "6. **Area** – The area of each cluster given in square kilometres.\n",
     "\n",
     "\n",
-    "7. **IsUrban** - Urban/Peri-urban/Rural classification (0 = rural, 1 = peri-urban, 2 = urban)\n",
+    "7. **IsUrban** - Urban/Peri-urban/Rural classification (urban = 2, peri-urban = 1, rural = 0)\n",
     "    "
    ]
   },
