--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -76,7 +76,13 @@
     "**NOTE** Select an empty folder as all the files will be deleted from the workspace once the clusters are generated\n",
     "\n",
     "You will also have to select the three datasets used in the analysis. These are:
+    "\n",
     "**administrative boundaries, population raster and nighttime lights**\n",
+    "Administrative boundaries\n",
+    "\n",
+    "Population raster\n",
+    "\n",
+    "Nighttime lights\n",
     " \n"
    ]
   },
