--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -75,13 +75,14 @@
     "\n",
     "**NOTE** Select an empty folder as all the files will be deleted from the workspace once the clusters are generated\n",
     "\n",
-    "You will also have to select the three datasets used in the analysis. These are:
+    "You will also have to select the three datasets used in the analysis. These are:\n",
     "\n",
-    "Administrative boundaries\n",
+    "**Administrative boundaries**\n",
     "\n",
-    "Population raster\n",
     "\n",
-    "Nighttime lights\n",
+    "**Population raster**\n",
+    "\n",
+    "**Nighttime lights**\n",
     " \n"
    ]
   },
