Fixed insstructions for each cell

--- a/Algorithm/funcs.ipynb
+++ b/Algorithm/funcs.ipynb
@@ -361,7 +361,7 @@
     "    \n",
     "    clusters.to_file(workspace + r\"/clusters.shp\") \n",
     "    \n",
-    "    print(\"modelled urban ratio is \" + str(round(urban_modelled, 3)) + \"% in comparision to the actual ratio of \" + str(urban_current) + \"% after \" + str(i) + \" iterations.\")"
+    "    print(\"Modelled urban ratio is \" + str(round(urban_modelled, 3)) + \"% in comparision to the actual ratio of \" + str(urban_current) + \"% after \" + str(i) + \" iterations.\")"
    ]
   },
   {
