--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -75,14 +75,7 @@
     "\n",
     "**NOTE** Select an empty folder as all the files will be deleted from the workspace once the clusters are generated\n",
     "\n",
-    "You will also have to select the three datasets used in the analysis. These are:\n",
-    "\n",
-    "**Administrative boundaries**\n",
-    "\n",
-    "\n",
-    "**Population raster**\n",
-    "\n",
-    "**Nighttime lights**\n",
+    "You will also have to select the three datasets used in the analysis. These are: administrative boundaries, population (.tif), Nighttime lights (.tif)\n",
     " \n"
    ]
   },
@@ -116,7 +109,7 @@
    "source": [
     "## Cell 3 - Setting study area name\n",
     "\n",
-    "This will dictate the name in the country column of the final clusters"
+    "This will dictate the name displayed in the country column of the final clusters"
    ]
   },
   {
@@ -133,7 +126,7 @@
    "metadata": {},
    "source": [
     "## Cell 4 - Setting the target coordinate system\n",
-    "When calculating distances it is important to choose a coordinate system that represents distances and areas correctly in your area of interst. The coordinate system that is given below is the World Mercator, these coordinate system works well for Sub Saharan Africa but the distortions get larger as you move away from the equator.\n",
+    "When calculating distances and areas it is important to choose a coordinate system that represents distances and areas correctly in your area of interst.\n",
     "\n",
     "In order to select your own coordinate system go to [epsg.io](http://epsg.io/) and type in your area of interest, this will give you a list of coordinate systems to choose from. Once you have selected your coordinate system replace the numbers below with the numbers from your coordinate system **(keep the \"EPSG\" part)**.\n",
     "\n",
@@ -156,7 +149,7 @@
     "## Cell 5 - Urban ratio, actual population and thresholds\n",
     "\n",
     "1) Enter the urban ratio in the study area. This will be used to calibrate the urban and rural clusters (0 = everyone is rural, 1 = everyone is urban).<br><br>\n",
-    "2) Enter the total population in your study area for the year of interest. This will be used to calibrate the raster population layer to the right population.<br><br>\n",
+    "2) Enter the total population in your study area for the year of interest. This will be used to calibrate the GIS-population.<br><br>\n",
     "3) Enter thresholds for population and nighttime light. All values under the threshold in the population and/or NTL maps will be removed. This will have an effect on the electrification proxy and can be used in order to remove noise in the NTL maps."
    ]
   },
@@ -178,7 +171,7 @@
    "source": [
     "## Cell 6 - Clipping raster layers\n",
     "\n",
-    "Clipping the nighttime lights and population maps to the extent of the study area."
+    "Clipping the nighttime lights and population maps to the extent of the study area. The first parameter is the raster to clip and the second parameter is the polygon to clip the raster by. **Do not change the parameters given here**."
    ]
   },
   {
@@ -197,7 +190,7 @@
    "source": [
     "## Cell 7 - Reclassifying rasters\n",
     "\n",
-    "Reclassifies the clipped nighttime lights and population layers. The function sets everything under the thresholds to zero. "
+    "Reclassifies the clipped nighttime lights and population layers. The function sets everything under the thresholds to zero. The first parameter is the clipped raster from cell 6 and the second parameter the thresholds from cell 5. **Do not change the parameters given here**."
    ]
   },
   {
@@ -239,7 +232,7 @@
    "source": [
     "## Cell 9 - Convert rasters to polygon\n",
     "\n",
-    "Converts the nighttime lights greater than the threshold to polygons. The second parameter ensures that the polygons are saved with the correct name"
+    "Converts the nighttime lights greater than the threshold to polygons. The second parameter ensures that the polygons are saved with the correct name. **Do not change the parameters given here**."
    ]
   },
   {
@@ -263,7 +256,9 @@
     "\n",
     "**toPolygon** coverts the results from the rasterMultiplication to polygons. The second parameter ensures that the polygons are saved with the correct name. \n",
     "\n",
-    "This ensures that the clusters do not spil over different administrative borders. If you do not wish to add such a restriction use the national administrative unit as your administrative layer (level 0). "
+    "This ensures that the clusters do not spil over different administrative borders. If you do not wish to add such a restriction use the national administrative unit as your administrative layer (level 0). \n",
+    "\n",
+    "**Do not change the parameters given here**."
    ]
   },
   {
@@ -283,7 +278,7 @@
    "source": [
     "## Cell 11 - Adding attributes to clusters\n",
     "\n",
-    "Generates the *id*, *Country* and *Area* columns."
+    "Generates the *id*, *Country* and *Area* columns. **Do not change the parameters given here**."
    ]
   },
   {
@@ -301,7 +296,7 @@
    "source": [
     "## Cell 12 - Generate ElecPop \n",
     "\n",
-    "Clip the population data with the polygon nighttime lights to generate layer with population in lit areas. This spatial distribution in this layer is dependent on the thresholds given in [Cell 5](http://localhost:8888/notebooks/main.ipynb#Cell-5---Urban-ratio,-actual-population-and-thresholds). "
+    "Clip the population data with the polygon nighttime lights to generate layer with population in lit areas. This spatial distribution in this layer is dependent on the thresholds given in [Cell 5](http://localhost:8888/notebooks/main.ipynb#Cell-5---Urban-ratio,-actual-population-and-thresholds). **Do not change the parameters given here**."
    ]
   },
   {
@@ -319,7 +314,7 @@
    "source": [
     "## Cell 13 - Populating clusters\n",
     "\n",
-    "Adding the *Population*, *NightLight* and *ElecPop* columns."
+    "Adding the *Population*, *NightLight* and *ElecPop* columns. **Do not change the parameters given here**."
    ]
   },
   {
@@ -339,7 +334,7 @@
    "source": [
     "## Cell 14 - Calibrate population \n",
     "\n",
-    "Calibrating population based on the population value given in [Cell 5](http://localhost:8888/notebooks/main.ipynb#Cell-5---Urban-ratio,-actual-population-and-thresholds)."
+    "Calibrating population based on the population value given in [Cell 5](http://localhost:8888/notebooks/main.ipynb#Cell-5---Urban-ratio,-actual-population-and-thresholds). **Do not change the parameters given here**."
    ]
   },
   {
@@ -358,7 +353,7 @@
    "source": [
     "## Cell 15 - Calibrate Urban and rural split \n",
     "\n",
-    "Calibrating urban ratio based on the urban rate given in [Cell 5](http://localhost:8888/notebooks/main.ipynb#Cell-5---Urban-ratio,-actual-population-and-thresholds)."
+    "Calibrating urban ratio based on the urban rate given in [Cell 5](http://localhost:8888/notebooks/main.ipynb#Cell-5---Urban-ratio,-actual-population-and-thresholds). **Do not change the parameters given here**."
    ]
   },
   {
