--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -296,7 +296,7 @@
    "source": [
     "## Cell 12 - Generate ElecPop \n",
     "\n",
-    "Clip the population data with the polygon nighttime lights to generate layer with population in lit areas. This spatial distribution in this layer is dependent on the thresholds given in [Cell 5](http://localhost:8888/notebooks/main.ipynb#Cell-5---Urban-ratio,-actual-population-and-thresholds). **Do not change the parameters given here**."
+    "Clip the population data with the polygon nighttime lights to generate layer with population in lit areas. This spatial distribution in this layer is dependent on the thresholds given in Cell 5. **Do not change the parameters given here**."
    ]
   },
   {
@@ -334,7 +334,7 @@
    "source": [
     "## Cell 14 - Calibrate population \n",
     "\n",
-    "Calibrating population based on the population value given in [Cell 5](http://localhost:8888/notebooks/main.ipynb#Cell-5---Urban-ratio,-actual-population-and-thresholds). **Do not change the parameters given here**."
+    "Calibrating population based on the population value given in Cell 5. **Do not change the parameters given here**."
    ]
   },
   {
@@ -353,7 +353,7 @@
    "source": [
     "## Cell 15 - Calibrate Urban and rural split \n",
     "\n",
-    "Calibrating urban ratio based on the urban rate given in [Cell 5](http://localhost:8888/notebooks/main.ipynb#Cell-5---Urban-ratio,-actual-population-and-thresholds). **Do not change the parameters given here**."
+    "Calibrating urban ratio based on the urban rate given in Cell 5. **Do not change the parameters given here**."
    ]
   },
   {
