--- a/Algorithm/funcs.ipynb
+++ b/Algorithm/funcs.ipynb
@@ -633,13 +633,15 @@
     "        dst.write(json.dumps(collection))\n",
     "  \n",
     "    clusters = gpd.read_file(output)\n",
-    "    clusters.fillna(0, inplace=True)\n",
     "    os.remove(output)\n",
     "    \n",
     "    clusters = clusters.rename(columns={\"Popsum\": \"Population\"})\n",
     "    clusters = clusters.rename(columns={\"NTLmax\": \"NightLight\"})\n",
     "    clusters = clusters.rename(columns={\"ElecPopsum\": \"ElecPop\"})\n",
     "    \n",
+    "    clusters[\"Population\"].fillna(0, inplace=True)\n",
+    "    clusters[\"NightLight\"].fillna(0, inplace=True)\n",
+    "    clusters[\"ElecPop\"].fillna(0, inplace=True)\n",
     "    pop_tot = clusters[\"Population\"].sum()\n",
     "    \n",
     "    ratio= act_pop/pop_tot\n",
