Added coordinate system to polygonize

--- a/Algorithm/funcs.ipynb
+++ b/Algorithm/funcs.ipynb
@@ -407,9 +407,14 @@
     "        driver.DeleteDataSource(outShapefile+\".shp\")\n",
     "    outDatasource = driver.CreateDataSource(outShapefile+ \".shp\")\n",
     "    \n",
-    "    outLayer = outDatasource.CreateLayer(outShapefile+ \".shp\", srs=None)\n",
+    "    spat_ref = osr.SpatialReference()\n",
+    "    proj = Raster.GetProjectionRef()\n",
+    "    spat_ref.ImportFromWkt(proj)\n",
+    "    \n",
+    "    outLayer = outDatasource.CreateLayer(outShapefile+ \".shp\", srs=spat_ref)\n",
     "    newField = ogr.FieldDefn('PLACEHOLDE', ogr.OFTInteger)\n",
     "    outLayer.CreateField(newField)\n",
+    "    \n",
     "    gdal.Polygonize(band, band, outLayer, 0, [\"8CONNECTED=8\",\"GROUPBY=PLACEHOLDE\"], callback=None)\n",
     "    outDatasource.Destroy()\n",
     "    sourceRaster = None\n",
@@ -678,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
