--- a/Algorithm/funcs.ipynb
+++ b/Algorithm/funcs.ipynb
@@ -79,20 +79,28 @@
     "\n",
     "    Parameters\n",
     "    ----------\n",
-    "    arg1 : raster\n",
+    "    arg1 : output\n",
+    "        The path and file name of the clipped raster\n",
+    "    arg2 : raster\n",
     "        Raster dataset to clip\n",
-    "    arg2 : polygon\n",
-    "        Polygon layer to clip by \n",
+    "    arg3 : polygon\n",
+    "        Polygon layer to clip by\n",
+    "    arg4 : nodata\n",
+    "        Value to be used as nodata in the clipped raster\n",
     "\n",
     "    Returns\n",
     "    ----------\n",
-    "    A clipped raster layer\n",
+    "    Two clipped raster layers. The layers are the same, but one of them is compatible with rasterio \n",
+    "    while the other one is compatible with GDAL  \n",
     "    \"\"\"\n",
     "    \n",
     "    bbox = polygon.total_bounds\n",
     "    bbox2 = [bbox[0], bbox[3], bbox[2], bbox[1]]\n",
-    "    clipped = gdal.Translate('', raster, format = 'MEM', projWin = bbox2, noData = 0)\n",
-    "    return clipped"
+    "    clipped = gdal.Translate(output, raster, projWin = bbox2, noData = nodata)\n",
+    "    rasterrasterio = rasterio.open(output)\n",
+    "    raster=gdal.Open(output)\n",
+    "    output = None\n",
+    "    return rasterrasterio, raster"
    ]
   },
   {
