--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -89,13 +89,15 @@
     "\n",
     "messagebox.showinfo('OnSSET', 'Select the population map')\n",
     "filename_pop = filedialog.askopenfilename(filetypes = ((\"rasters\",\"*.tif\"),(\"all files\",\"*.*\")))\n",
-    "pop=gdal.Open(filename_pop)\n",
     "poprasterio=rasterio.open(filename_pop)\n",
+    "nodata_pop = poprasterio.nodata\n",
+    "pop=gdal.Open(filename_pop)\n",
     "\n",
     "messagebox.showinfo('OnSSET', 'Select the nightlights map')\n",
     "filename_NTL = filedialog.askopenfilename(filetypes = ((\"rasters\",\"*.tif\"),(\"all files\",\"*.*\")))\n",
-    "NTL = gdal.Open(filename_NTL)\n",
     "NTLrasterio = rasterio.open(filename_NTL)\n",
+    "nodata_NTL = NTLrasterio.nodata\n",
+    "NTL = gdal.Open(filename_NTL)\n",
     "\n",
     "messagebox.showinfo('OnSSET', 'Select the admin map')\n",
     "filename_admin = (filedialog.askopenfilename(filetypes = ((\"shapefile\",\"*.shp\"),(\"all files\",\"*.*\"))))\n",
@@ -170,7 +172,7 @@
    "source": [
     "## Cell 6 - Clipping raster layers\n",
     "\n",
-    "Clipping the nighttime lights and population maps to the extent of the study area. The first parameter is the raster to clip and the second parameter is the polygon to clip the raster by. **Do not change the parameters given here**."
+    "Clipping the nighttime lights and population maps to the extent of the study area. The first parameter is the path and name of the clipped raster file, the second parameter represents the raster data to be clipped, the third parameter is the polygon to clip the raster by and the fourth parameter represents the no data value to be used in the output file. **Do not change the parameters given here**."
    ]
   },
   {
@@ -179,8 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clipped_NTL = clipRasterByExtent(NTL, admin)\n",
-    "clipped_Pop = clipRasterByExtent(pop, admin)"
+    "NTLrasterio, clipped_NTL = clipRasterByExtent(workspace + r\"/\" + study_area_name + \"NTL.tif\", NTL, admin, nodata_NTL)\n",
+    "poprasterio, clipped_Pop = clipRasterByExtent(workspace + r\"/\" + study_area_name + \"Pop.tif\", pop, admin, nodata_pop)"
    ]
   },
   {
@@ -389,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
