Clarified the resampling instructions

--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -212,7 +212,7 @@
     "\n",
     "Resample population layer and save the resampled map to disc.\n",
     "\n",
-    "In **resampleRaster** the first parameter is the raster to be reclassified. The second parameter is the factor used in the resampling (i.e if you have a raster with cell size 30m a factor 3 creates an output raster with cell size 90m). You are recommended to change this value to one if the cell-size of your population layer is larger than 100m. The output is a memory layer.\n",
+    "In **resampleRaster** the first parameter is the raster to be reclassified. The second parameter is the factor used in the resampling (i.e if you have a raster with cell size 30m a factor 3 creates an output raster with cell size 90m). You are recommended to change this value to 1 if the cell-size off your population layer has a cell size large than 100 sq. meteris larger than 100m. The output is a memory layer.\n",
     "\n",
     "In **saveRaster** the memory layer from resampleRaster is saved to disc."
    ]
