Fixed error in clipping function

--- a/Algorithm/funcs.ipynb
+++ b/Algorithm/funcs.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clipRasterByExtent(raster, polygon):\n",
+    "def clipRasterByExtent(output, raster, polygon, nodata):\n",
     "    \"\"\"\n",
     "    Clipping a raster to the extent of a polygon layer\n",
     "\n",
